<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2018 Newamber(Liu Enbei)
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>

    <!-- Special Char -->
    <string name="empty_string"> </string>
    <string name="snack_bar_default_action_text">@string/empty_string</string>

    <!-- Standard Text -->
    <string name="test">test txt</string>
    <string name="media_library">Media</string>
    <string name="folder">Folder</string>
    <string name="about">About</string>
    <string name="donation">Donation</string>
    <string name="settings">Settings</string>
    <string name="developing">developing…</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="search">search</string>
    <string name="shuffle_all">Shuffle All</string>
    <string name="grid_size">Grid Size</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="equalizer">Equalizer</string>
    <string name="song">Song</string>
    <string name="album">album</string>
    <string name="artist">Artist</string>
    <string name="playlist">Playlist</string>

    <!-- Toolbar menu item special -->
    <string name="grid_size_1">1</string>
    <string name="grid_size_2">2</string>
    <string name="grid_size_3">3</string>
    <string name="grid_size_4">4</string>

    <string-array name="viewpager_main_title">
        <item>Song</item>
        <item>Album</item>
        <item>Artist</item>
        <item>Playlist</item>
    </string-array>

</resources>
