<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2018 Newamber(Liu Enbei)
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/toolbar_main_menu_search"
        android:visible="true"
        android:title="@string/search"
        android:icon="@drawable/ic_toolbar_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/toolbar_main_menu_shuffle_all"
        android:visible="true"
        android:title="@string/shuffle_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/toolbar_main_menu_grid_size"
        android:title="@string/grid_size">
        <menu>
            <group
                android:id="@+id/group_grid_size"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/toolbar_main_menu_grid_1"
                    android:title="@string/grid_size_1"/>
                <item
                    android:id="@+id/toolbar_main_menu_grid_2"
                    android:title="@string/grid_size_2"/>
                <item
                    android:id="@+id/toolbar_main_menu_grid_3"
                    android:title="@string/grid_size_3"/>
                <item
                    android:id="@+id/toolbar_main_menu_grid_4"
                    android:title="@string/grid_size_4"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/toolbar_main_menu_sleep_timer"
        android:title="@string/sleep_timer"
        android:orderInCategory="98"
        app:showAsAction="never" />
    <item
        android:id="@+id/toolbar_main_menu_equalizer"
        android:title="@string/equalizer"
        android:orderInCategory="99"
        app:showAsAction="never" />
</menu>