<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2018 Newamber(Liu Enbei)
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single"
        android:id="@+id/group_general">
        <item
            android:id="@+id/navigation_menu_media_library"
            android:icon="@drawable/ic_navigation_media_library"
            android:title="@string/media_library" />
        <item
            android:id="@+id/navigation_menu_folder"
            android:icon="@drawable/ic_navigation_folder"
            android:title="@string/folder" />
    </group>

    <group
        android:checkableBehavior="single"
        android:id="@+id/group_info">
        <item
            android:id="@+id/navigation_menu_settings"
            android:icon="@drawable/ic_navigation_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/navigation_menu_donation"
            android:icon="@drawable/ic_navigation_donation"
            android:title="@string/donation" />
        <item
            android:id="@+id/navigation_menu_about"
            android:icon="@drawable/ic_navigation_about"
            android:title="@string/about" />
    </group>
</menu>